# vins_eval

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTORS.md  LICENSE.md  README.md
.catkin_config/: no_binary.yaml
docker/: Dockerfile
script/: Odometry2PoseWithCovarianceStamped.py  estimators_run.sh  generate_data.sh  replace_msg_time_with_hdr.py  switch_bag_time.py
script/docker/: estimators_run_docker.sh  generate_data_docker.sh
src/logichandler/: CMakeLists.txt  package.xml
src/logichandler/include/: InputDataConverter.hpp  InputDataGenerator.hpp  InputDataParser.hpp
src/logichandler/launch/: logichandler.launch
src/logichandler/src/: InputDataConverter.cpp  InputDataGenerator.cpp  InputDataHandler.cpp  InputDataParser.cpp  LogicHandler.cpp
src/logichandler/srv/: startstop.srv
src/vinseval/vinseval/: CMakeLists.txt  package.xml
src/vinseval/vinseval_bringup/: CMakeLists.txt  package.xml
src/vinseval/vinseval_bringup/config/outputdatahandler/: outputdatahandler.config
src/vinseval/vinseval_bringup/config/vinsmono/: vinseval.yaml
src/vinseval/vinseval_bringup/launch/: outpudatahandler.launch  vinseval_ov.launch  vinseval_vinsmono.launch
trajectories/: Trajectory_20.csv  Trajectory_26.csv  Trajectory_31.csv  Trajectory_47.csv  Trajectory_56.csv  Trajectory_57.csv  Trajectory_69.csv  Trajectory_86.csv  Trajectory_89.csv
