<?xml version="1.0"?>
<package format="2">
    <name>vinseval</name>
    <version>1.0.0</version>
    <description>Metapackage for VINSEval launch file collection.</description>
    <author>Martin Scheiber</author>
    <maintainer email="martin.scheiber@ieee.org">Martin Scheiber</maintainer>

    <license>BSD with modified Commons Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>vinseval_bringup</exec_depend>
</package>
